more pages additions

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,9 +1,3 @@
----
-layout: cascade
-title: "Breadcrumbs"
----
-   
-		
 <div class="breadcrumbs clearfix">
     <ul>
         <li>
@@ -30,13 +24,8 @@ title: "Breadcrumbs"
             </a>
         </li>
         <li>
-            <span class="bullet">»</span>
-            Information Guides
+            <span class="bullet">»</span> Information Guides
         </li>
     </ul>
 
 </div>
-
-    
-
-	
