--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -6,11 +6,7 @@
     </div>
 
 </div>
-
-<br>
-<br>
-<br>
-
+<!-- 
 <div class="smallMasthead">
 
     <div class="masthead-old">
@@ -18,4 +14,4 @@
         <div></div>
     </div>
 
-</div>
+</div> -->
