Renamed stylesheet to master.

--- a/_layouts/2_column.html
+++ b/_layouts/2_column.html
@@ -25,7 +25,7 @@
   <!-- <system-region name="CSS FOR SEPARATE WIDGETS"/> -->
 
   <!-- JEKYLL STYLES -->
-  <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path cu_cascade.css %}">
+  <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path master.css %}">
 
   <!-- scripts -->
   <!-- <system-region name="COMMON SCRIPTS"/>  -->
@@ -39,7 +39,7 @@
 
   <!-- JEKYLL SCRIPTS -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="{{ site.baseurl}}{% asset_path cu_cascade.js %}"></script>
+  <script type="text/javascript" src="{{ site.baseurl}}{% asset_path master.js %}"></script>
   
   <!-- <system-region name="FB_JS_SDK"/> -->
   <!-- <system-region name="ADDITIONAL HEAD"/> -->
