--- a/_layouts/2_column_identical.html
+++ b/_layouts/2_column_identical.html
@@ -24,14 +24,14 @@
     </script>
 
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path cu_cascade.css %}">
+    <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path master.css %}">
 
     <!-- scripts -->
 
     <script src="//use.typekit.net/eyn5jyy.js" type="text/javascript"></script>
     <script type="text/javascript">try {Typekit.load();} catch (e) {}</script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl}}{% asset_path cu_cascade.js %}"></script>
+    <script type="text/javascript" src="{{ site.baseurl}}{% asset_path master.js %}"></script>
 
     <script>
     window.fbAsyncInit = function() {
