--- a/_layouts/3_column.html
+++ b/_layouts/3_column.html
@@ -24,7 +24,7 @@
   <system-region name="CSS FOR SEPARATE WIDGETS"/>
 
   <!-- JEKYLL STYLES -->
-  <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path cu_cascade.css %}">
+  <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path master.css %}">
   
   <!-- scripts -->
   <system-region name="COMMON SCRIPTS"/>  
@@ -37,7 +37,7 @@
   <system-region name="GOOGLE_ANALYTICS"/>
 
   <!-- JEKYLL SCRIPTS -->
-  <script type="text/javascript" src="{{ site.baseurl}}{% asset_path cu_cascade.js %}"></script>
+  <script type="text/javascript" src="{{ site.baseurl}}{% asset_path master.js %}"></script>
 
 </head>
 
