--- a/_layouts/cascade.html
+++ b/_layouts/cascade.html
@@ -7,7 +7,7 @@
 	  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 	  <!-- STYLE -->
-	  <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path cu_cascade.css %}">
+	  <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path master.css %}">
 	  <!-- <link rel="stylesheet" type="text/css" href ="{{ site.baseurl}}{% asset_path site.css %}"> -->
 	
 
@@ -15,7 +15,7 @@
 	  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
 	  <script type="text/javascript" src="//use.typekit.net/nqy1aog.js"></script>
 	  <script>try{Typekit.load();}catch(e){}</script>
-	  <script type="text/javascript" src="{{ site.baseurl}}{% asset_path cu_cascade.js %}"></script>
+	  <script type="text/javascript" src="{{ site.baseurl}}{% asset_path master.js %}"></script>
 	  <!-- <script type="text/javascript" src="{{ site.baseurl}}{% asset_path site.js %}"></script> -->
 	  
 	</head>
