--- a/_assets/stylesheets/base/_breadcrumbs.scss
+++ b/_assets/stylesheets/base/_breadcrumbs.scss
@@ -32,7 +32,7 @@
     height: 17px;
     width: 13px;
     text-indent: -9999px;
-    background-image: url("../level/img/home_icon.png");
+    background-image: image-url('home_icon.png');
     background-repeat: no-repeat;
     background-position: left center;
   }
