--- a/_assets/stylesheets/base/_left-nav-ul.scss
+++ b/_assets/stylesheets/base/_left-nav-ul.scss
@@ -91,8 +91,8 @@
 	          font-weight: 700;
 	        }
 	        .plus {
-	        	// background-image: url('../img/leftNavOpenClose.png');
-	          background-image: url(img/miscButtons.png);
+	        	// background-image: image-url('leftNavOpenClose.png');
+	          background-image: image-url('miscButtons.png');
 	          background-repeat: no-repeat;
 	          // background-position: 7px center;
 	          background-position: -79px 0px;
