--- a/_assets/stylesheets/base/_news-events-content.scss
+++ b/_assets/stylesheets/base/_news-events-content.scss
@@ -130,7 +130,7 @@
   h6 {
     // display: none !important;
     background-color: $cu-red;
-    background-image: url("../img/active_tab_bg.png");
+    background-image: image-url('active_tab_bg.png');
     background-repeat: repeat-x;
     background-position: left top;
     font-size: 14px;
