--- a/_assets/stylesheets/layout/_one-column.scss
+++ b/_assets/stylesheets/layout/_one-column.scss
@@ -80,7 +80,7 @@
     margin: 0 auto 0 auto;
     &:before {
     	@include bp(l) {
-    		background-image: url("oneColumnMasthead.png");
+    		// background-image: image-url('oneColumnMasthead.png');
     	}
     }
     > div {
