--- a/_assets/stylesheets/themes/crean.scss
+++ b/_assets/stylesheets/themes/crean.scss
@@ -40,11 +40,11 @@
 
 #social_follow_us {
   .banner {
-    background-image: url('[system-asset]/_files/social_accounts/images/crean_follow_us.png[/system-asset]');
+    background-image: image-url('crean_follow_us.png');
   }
   li span {
     &.hover_state, &.inactive_state {
-      background: url('[system-asset]/_files/social_accounts/images/crean_icons.png[/system-asset]');
+      background: image-url('crean_icons.png');
     }
   }
 }
