--- a/_assets/stylesheets/base/_defaults.scss
+++ b/_assets/stylesheets/base/_defaults.scss
@@ -13,7 +13,7 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  background-image: url("img/diamond_pattern.gif");
+  background-image: image-url('diamond_pattern.gif');
   background-color: $cu-light-grey;
   font-family: "proxima-nova-soft", "proxima-nova-soft-n4", sans-serif;
   overflow-x: hidden;
