--- a/_assets/stylesheets/base/_flexslider.scss
+++ b/_assets/stylesheets/base/_flexslider.scss
@@ -288,8 +288,8 @@ html[xmlns] .slides {
     height: 56px;
     margin: -28px 0 0;
     display: block;
-    // background-image: url("../img/gray_arrows.png");
-    background: url(../img/bg_direction_nav.png) no-repeat 0 0;
+    // background-image: image-url('gray_arrows.png');
+    // background: image-url('bg_direction_nav.png') no-repeat 0 0;
     position: absolute;
     top: 50%;
     cursor: pointer;
@@ -357,7 +357,7 @@ html[xmlns] .slides {
       width: 13px;
       height: 13px;
       display: block;
-      background: url(../img/bg_control_nav.png) no-repeat 0 0;
+      // background: image-url('bg_control_nav.png') no-repeat 0 0;
       cursor: pointer;
       text-indent: -9999px;
       &:hover {
