--- a/_assets/stylesheets/base/_logo.scss
+++ b/_assets/stylesheets/base/_logo.scss
@@ -8,7 +8,7 @@
   width: 280px;
   margin: 10px 0 0 10px;
   text-indent: -999em;
-  background-image: url("../img/logo.png");
+  background-image: image-url('logo.png');
   background-repeat: no-repeat;
   .virtualTour & {
     margin: 0 auto;
@@ -31,7 +31,7 @@
     // margin: 10px 0 0 10px;
     margin: -6px 0 0 10px;
     text-indent: -999em;
-    background-image: url("../img/logo.png");
+    background-image: image-url('logo.png');
     background-repeat: no-repeat;
   }
   @include bp(wildcard-min, 1085px) {
