--- a/_assets/stylesheets/base/_main-nav-links.scss
+++ b/_assets/stylesheets/base/_main-nav-links.scss
@@ -97,7 +97,7 @@
           }
           @include bp(m) {
             background-color: #faf9f6;
-            background-image: url("../img/up_arrow.png");
+            background-image: image-url('up_arrow.png');
           }
         }
         @include bp(m) {
@@ -202,7 +202,7 @@
     // background-color: transparent;
     // background-color: $black;
     background-color: $grey;
-    background-image: url("img/ribbon_tails.png");
+    background-image: image-url('ribbon_tails.png');
     background-repeat: no-repeat;
     background-position: -2px 0;
     // width: 700px;
