--- a/_assets/stylesheets/base/_news-events-nav.scss
+++ b/_assets/stylesheets/base/_news-events-nav.scss
@@ -1,6 +1,6 @@
 .newsEventsNav {
 	// display: block;
- //  background-image: url("../img/tab_shadow.png");
+ //  background-image: image-url('tab_shadow.png');
  //  background-repeat: no-repeat;
  //  background-position: left 4px;
  //  height: 37px;
@@ -27,7 +27,7 @@
       }
     }
     @include bp(l) {
-      // background-image: url("../img/tab_shadow_long.png");  
+      // background-image: image-url('tab_shadow_long.png');  
       // background-position: left bottom;
       // height: auto;
       height: 35px;
@@ -51,7 +51,7 @@
 	 //  height: 30px;
 	 //  line-height: 30px;
 	 //  background-color: $white;
-	 //  background-image: url("../img/tab_bg.png");
+	 //  background-image: image-url('tab_bg.png');
 	 //  background-repeat: repeat-x;
 	 //  background-position: left top;
 	 //  border: 1px solid #c4c2b7;
@@ -77,7 +77,7 @@
     &.active {
 			// color: $white;
 			// background-color: $cu-red;
-			// background-image: url("../img/active_tab_bg.png");
+			// background-image: image-url('active_tab_bg.png');
 			// background-repeat: repeat-x;
 			// background-position: left top;
 			// font-weight: bold;
