--- a/_assets/stylesheets/layout/home/_main.scss
+++ b/_assets/stylesheets/layout/home/_main.scss
@@ -28,7 +28,7 @@
       height: 44px;
       padding: 5px;
       margin: 0 0 0 10px;
-      background: url('../img/gray_50.png');
+      background: image-url('gray_30.png');
       text-indent: -9999px;
       opacity: 0.75;
       -webkit-transition: opacity 0.2s ease-out, height 0s ease-out;
@@ -50,19 +50,19 @@
       }
     }
     #changeVolume {
-      background: rgba(0, 0, 0, 0.8) url('../img/icons/svg/volume-on_white.svg') no-repeat center;
+      background: rgba(0, 0, 0, 0.8) image-url('volume-on_white.svg') no-repeat center;
       background-size: 20px;
       &.muted {
-        background: rgba(0, 0, 0, 0.8) url('../img/icons/svg/volume-off_white.svg') no-repeat 16px center;
+        background: rgba(0, 0, 0, 0.8) image-url('volume-off_white.svg') no-repeat 16px center;
         background-size: 20px;
       }
     }
     #showOlderContent {
-      background: rgba(0, 0, 0, 0.8) url('../img/icons/svg/arrow-right_white.svg') no-repeat center;
+      background: rgba(0, 0, 0, 0.8) image-url('arrow-right_white.svg') no-repeat center;
       background-size: 20px;
     }
     #showNewerContent {
-      background: rgba(0, 0, 0, 0.8) url('../img/icons/svg/arrow-left_white.svg') no-repeat center;
+      background: rgba(0, 0, 0, 0.8) image-url('arrow-left_white.svg') no-repeat center;
       background-size: 20px;
     }
     @include bp(wildcard-min, 680px) {
