--- a/_assets/stylesheets/layout/level/_header.scss
+++ b/_assets/stylesheets/layout/level/_header.scss
@@ -1,6 +1,6 @@
 header {
   @include bp(m) {
-  	// background-image: url("../img/diamond_pattern.png");
+  	// background-image: image-url('diamond_pattern.png');
 	  // background-color: $white;
 	  // background-repeat: repeat;
 	  // padding: 0 0 15px 0;
