--- a/_assets/stylesheets/themes/dodge.scss
+++ b/_assets/stylesheets/themes/dodge.scss
@@ -34,16 +34,16 @@
 #social_follow_us {
   li span {
     &.hover_state, &.inactive_state {
-      background-image: url('[system-asset]/_files/social_accounts/images/dodge_icons.png[/system-asset]');
+      background-image: image-url('dodge_icons.png');
     }
   }
   .banner {
-    background: url('[system-asset]/_files/social_accounts/images/dodge_follow_us.png[/system-asset]');
-    background-image: url('[system-asset]/_files/social_accounts/images/dodge_follow_us.png[/system-asset]');
+    background: image-url('dodge_follow_us.png');
+    background-image: image-url('dodge_follow_us.png');
   }
   li span {
     &.hover_state, &.inactive_state {
-      background: url('[system-asset]/_files/social_accounts/images/dodge_icons.png[/system-asset]');
+      background: image-url('dodge_icons.png');
     }
   }
 }
