--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,11 @@
     <script src="../../_files/js/widgets/primary-content/carousel.js"></script> -->
     <script type="text/javascript" src="{{ site.baseurl}}{% asset_path master.js %}"></script>
 
+    <!--[if lt IE 7 ]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+    <![endif]-->
+
 
     <script>
     window.fbAsyncInit = function() {
