--- a/_includes/modules/personnel-region.html
+++ b/_includes/modules/personnel-region.html
@@ -1,6 +1,6 @@
 <div class="searchResults personnel-listing">
     <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
-        <img alt="Benjamin 'Hawkeye' Pierce" class="image" itemprop="image" src="_files/sample-personnel-image1.jpg" style="width:120px;" />
+        <img alt="Benjamin 'Hawkeye' Pierce" class="image" itemprop="image" src="{% asset_path placeholder/user_2.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Benjamin 'Hawkeye' Pierce</div>
         <div class="title" itemprop="title">Captain, Chief Surgeon</div>
         <div class="location">Crabapple Cove, Maine</div>
@@ -15,7 +15,7 @@
 </div>
 <div class="searchResults personnel-listing">
     <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
-        <img alt="Margaret 'Hot Lips' Houlihan" class="image" itemprop="image" src="_files/sample-personnel-image2.jpg" style="width:120px;" />
+        <img alt="Margaret 'Hot Lips' Houlihan" class="image" itemprop="image" src="{% asset_path placeholder/user_1.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Margaret 'Hot Lips' Houlihan</div>
         <div class="title" itemprop="title">Major, Head Nurse</div>
         <div class="location">Fort Ord, California</div>
@@ -30,7 +30,7 @@
 </div>
 <div class="searchResults personnel-listing">
     <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
-        <img alt="First Name Last Name" class="image" itemprop="image" src="../_files/130x150.jpg" style="width:120px;" />
+        <img alt="First Name Last Name" class="image" itemprop="image" src="{% asset_path placeholder/user_3.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">First Name Last Name</div>
         <div class="title" itemprop="title">Title of Personnel</div>
         <div class="location">Location on Campus</div>
@@ -41,7 +41,7 @@
 </div>
 <div class="searchResults personnel-listing">
     <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
-        <img alt="Sherman Potter" class="image" itemprop="image" src="_files/sample-personnel-image3.jpg" style="width:120px;" />
+        <img alt="Sherman Potter" class="image" itemprop="image" src="{% asset_path placeholder/user_4.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Sherman Potter</div>
         <div class="title" itemprop="title">Colonel, Commanding Officer </div>
         <div class="location">Hannibal, Missouri</div>
@@ -56,7 +56,7 @@
 </div>
 <div class="searchResults personnel-listing">
     <div class="result person" itemscope="itemscope" itemtype="http://schema.org/Person">
-        <img alt="Walter 'Radar' O’Reilly" class="image" itemprop="image" src="_files/sample-personnel-image4.jpg" style="width:120px;" />
+        <img alt="Walter 'Radar' O’Reilly" class="image" itemprop="image" src="{% asset_path placeholder/user_5.jpg %}" style="width:120px;" />
         <div class="name" itemprop="name">Walter 'Radar' O’Reilly</div>
         <div class="title" itemprop="title">Corporal, Company Clerk</div>
         <div class="location">Ottumwa, Iowa</div>
