added some more samples

--- a/docs/_layouts/2_column_modular.html
+++ b/docs/_layouts/2_column_modular.html
@@ -23,9 +23,10 @@
         {% include header.html %}
 
         <div id="main" role="main">
-            <div class="mastheadPlaceholder">
-                <div></div>
-            </div>
+
+            {% if page.masthead %}
+                {% include modules/masthead/{{page.masthead}}.html %}
+            {% endif %}
 
             <div class="subRotator">
 
