--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -81,13 +81,13 @@
 @import "modules/three-box-callout";
 
 // Themes
-@import "themes/wilkinson";
-@import "themes/theatre";
-@import "themes/asbe";
-@import "themes/ces";
-@import "themes/copa";
-@import "themes/crean";
-@import "themes/dance";
-@import "themes/dodge";
-@import "themes/pharmacy";
+// @import "themes/wilkinson";
+// @import "themes/theatre";
+// @import "themes/asbe";
+// @import "themes/ces";
+// @import "themes/copa";
+// @import "themes/crean";
+// @import "themes/dance";
+// @import "themes/dodge";
+// @import "themes/pharmacy";
 @import "themes/scst";
