master center fix

--- a/src/stylesheets/modules/masthead.scss
+++ b/src/stylesheets/modules/masthead.scss
@@ -227,6 +227,7 @@
     max-width: 1128px;
     max-height: 440px;
     background: $grey;
+    margin: 0 auto;
   }
   .flexslider {
     overflow: hidden !important;
