added right column stuff

--- a/docs/_includes/modules/right_column/flickr_gallery.html
+++ b/docs/_includes/modules/right_column/flickr_gallery.html
@@ -1,3 +1,5 @@
-<div class="flickr-widget callout photo-gallery flickr-gallery" data-feed="$feed">
-
+<div class="flickr-widget callout photo-gallery flickr-gallery" data-feed="FlickrChapman">
+	<h3>Flickr Widget</h3>
+    <ul/>
+    <a class="more-link" href="javascript:;">See Full Gallery <span class="arrow">»</span></a>
 </div>
