--- a/docs/_includes/modules/right_column/picasa_gallery.html
+++ b/docs/_includes/modules/right_column/picasa_gallery.html
@@ -1,3 +1,8 @@
-<div class="picasa-widget callout photo-gallery picasa-gallery" data-feed="$feed">
-
+<div class="picasa-widget callout photo-gallery picasa-gallery" data-feed="PicasaChapman">
+	<h3>Picasa Widget</h3>
+    <ul>
+    </ul>
+    <a class="more-link" href="javascript:;">
+              See Full Gallery <span class="arrow">»</span>
+            </a>
 </div>
