--- a/docs/_includes/modules/right_column/action_buttons.html
+++ b/docs/_includes/modules/right_column/action_buttons.html
@@ -1,3 +1,10 @@
 <div class="action-buttons-widget newbutton">
-
+    <ul>
+        <li><a href="http://giphy.com/gifs/squirrel-CzX95B8KSF5cI">External Link</a>
+        </li>
+        <li><a href="2-column-modular-james-test.aspx">Internal Link</a>
+        </li>
+        <li><a href="Funny-Squirrels-Funny-Squirrel-Picture-54-FunnyPica.com_.jpg">File Link</a>
+        </li>
+    </ul>
 </div>
