--- a/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
+++ b/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
@@ -8,7 +8,7 @@
     <li class="" style="display: none;">
         <div class="featured">
             <div class="col1">
-                <img class="image" height="190" src="/_files/img/homepage/news/cancer-bands.jpg" width="190" alt="enter title here which will also become a clickable link">
+                <img class="image" height="190" src="{% asset_path placeholder/cancer_bands.jpg %}" width="190" alt="enter title here which will also become a clickable link">
             </div>
             <div class="col2">
                 <div class="date">
@@ -81,7 +81,7 @@
     </li>
     <li class="active" style="display: none;">
       <div class="events clearfix">
-        <img alt="page loading" class="centerNewsLoader loading" src="../_files/level/img/ajax-loader.gif">
+        <img alt="page loading" class="centerNewsLoader loading" src="{% asset_path ajax-loader.gif %}">
         <div class="story story1" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
           <div class="todayTomorrow">
             <span class="today">TODAY</span>
