--- a/src/stylesheets/layout/form.scss
+++ b/src/stylesheets/layout/form.scss
@@ -1,56 +1,3 @@
-.responsiveForm {
-  background-color: $cu-light-grey;
-  border-bottom: 1px solid #4A4949;
-  color: #4A4949;
-  padding: 10px 45px;
-  label {
-    display: block;
-  }
-  input {
-    &[type=text], &[type=password] {
-      max-width: 100%;
-      margin: 5px 0 15px 0;
-    }
-  }
-  textarea, select {
-    max-width: 100%;
-    margin: 5px 0 15px 0;
-  }
-  input {
-    &[type=checkbox], &[type=radio] {
-      margin: 5px 0 3px 25px;
-    }
-    &[type=submit] {
-      display: block;
-    }
-  }
-  a.button {
-    display: block;
-  }
-  fieldset {
-    margin: 10px 0 10px 0;
-    &.showBorder {
-      border: thin solid #D2D1CD;
-      padding: 5px;
-    }
-    legend {
-      margin: 0 0 10px 0;
-    }
-  }
-  input {
-    &[type=radio] + label, &[type=checkbox] + label {
-      // display: inline;
-      display: block;
-      margin-top: -17px;
-      margin-left: 41px;
-      &:after {
-        // content: '';
-        // display: block; 
-      }
-    }
-  }
-}
-
 .form {
   padding: 10px 45px;
   background-color: #E5E2CF;
@@ -143,4 +90,55 @@ input[type=submit], a.button {
   &:hover {
     background-color: #AF2C50;
   }
+}
+
+.responsiveForm {
+    background-color: #f7f6f0;
+    border-bottom: 1px solid #4A4949;
+    color: #4A4949;
+    padding: 10px 45px;
+}
+
+/************ these responsiveForm used in surrounding DIV for all full page forms ************/
+.responsiveForm label{
+    display:block;
+    font-weight: bold;
+}
+
+.responsiveForm input[type=text],
+.responsiveForm input[type=password],
+.responsiveForm textarea,
+.responsiveForm select{
+    max-width:100%;
+    margin:5px 0 15px 0;   
+}
+
+.responsiveForm input[type=checkbox],
+.responsiveForm input[type=radio]{
+    margin: 5px 0 3px 25px;   
+}
+
+.responsiveForm input[type=submit], 
+.responsiveForm a.button{
+    display:block;
+}
+
+.responsiveForm fieldset{
+    margin:10px 0 10px 0;  
+}
+.responsiveForm fieldset.showBorder {
+    border: thin solid #D2D1CD; 
+    padding: 5px;   
+}
+
+.responsiveForm fieldset legend{
+    margin:0 0 10px 0; 
+    font-weight: bold;
+}
+
+.responsiveForm input[type=radio]+label,
+.responsiveForm input[type=checkbox]+label {
+    display:block;     
+    margin-top:-17px; margin-left: 41px;
+    font-weight: normal;
 }
