Added overflow to region parent container; fixes #2

--- a/src/stylesheets/widgets/spotlight-region.scss
+++ b/src/stylesheets/widgets/spotlight-region.scss
@@ -7,6 +7,10 @@ div.four-col-float {
 
 /*Region*/
 
+.region {
+    overflow: auto; 
+}
+
 .region h3 {
     border-bottom: 1px solid #383838;
     clear: both;
