--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -90,4 +90,4 @@
 // @import "themes/dance";
 // @import "themes/dodge";
 // @import "themes/pharmacy";
-@import "themes/scst";
+// @import "themes/scst";
