--- a/docs/_layouts/3_column_modular.html
+++ b/docs/_layouts/3_column_modular.html
@@ -31,7 +31,10 @@
             <div class="subRotator">
                 <div class="primaryContent threeColumns clearfix">
 
-                    {% include breadcrumbs.html %}
+                    <div class="breadcrumbs clearfix">
+                        {% include breadcrumbs.html %}
+                        {% include social-media-icons.html %}
+                    </div>
 
                     <div class="middleRightContainer">
                         <div class="main">
