News events widget :)

--- a/docs/_includes/widgets/primary_content/news_events_feed_1.html
+++ b/docs/_includes/widgets/primary_content/news_events_feed_1.html
@@ -1,4 +1,4 @@
-<div class="newsEvents">
+<div class="news-events-widget newsEvents">
     <ul class="newsEventsNav">
         <li class="">Featured</li>
         <li>News</li>
@@ -27,7 +27,7 @@
         <img alt="page loading" class="centerNewsLoader loading" src="../_files/level/img/ajax-loader.gif">
         <div class="story story1" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
           <div class="todayTomorrow">
-            <span class="today">TODAY</span>
+            <span class="today" style="visibility: visible;">TODAY</span>
             <span class="tomorrow">TOMORROW</span>
           </div>
           <div class="date" itemprop="datePublished">
