--- a/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
+++ b/docs/_includes/widgets/primary_content/featured_news_events_feed_1.html
@@ -1,48 +1,31 @@
-<div class="newsEvents">
+<div class="news-events-widget newsEvents">
     <ul class="newsEventsNav">
-        <li class="">Featured</li>
+        <li class="active">Featured</li>
         <li>News</li>
-        <li class="active">Events</li>
+        <li>Events</li>
     </ul>
   <ul class="newsEventsContent">
-    <li class="" style="display: none;">
+    <li class="active">
         <div class="featured">
             <div class="col1">
-                <img class="image" height="190" src="{% asset_path placeholder/cancer_bands.jpg %}" width="190" alt="enter title here which will also become a clickable link">
+                <img class="image" height="190" src="" width="190"/>
             </div>
             <div class="col2">
                 <div class="date">
-                    <div class="day">10</div>
-                    <div class="month">APR</div>
-                    <div class="year">2013</div>
+                    <div class="day"></div>
+                    <div class="month"></div>
+                    <div class="year"></div>
                 </div>
-                <div class="title"><a href="http://blogs.chapman.edu/happenings/2013/04/10/sophomore-katie-murphy-socks-it-to-cancer-with-a-touch-of-medical-fashion/?utm_source=ThisWeek&amp;utm_medium=email&amp;utm_campaign=ThisWeek">enter title here which will also become a clickable link</a></div>
-                <div class="description">enter short teaser paragraph here enter short teaser paragraph here enter short teaser paragraph here enter short teaser paragraph here </div>
-                <div class="readMore"><a href="http://blogs.chapman.edu/happenings/2013/04/10/sophomore-katie-murphy-socks-it-to-cancer-with-a-touch-of-medical-fashion/?utm_source=ThisWeek&amp;utm_medium=email&amp;utm_campaign=ThisWeek">Read More<span class="bullet"> »</span></a></div>
+                <div class="title"></div>
+                <div class="description">View the published page to see this section.</div>
+                <div class="readMore"></div>
             </div>
         </div>
     </li>
-    <li style="display: none;">
+    <li>
       <div class="news clearfix">
-        <img alt="page loading" class="centerNewsLoader loading" src="../_files/level/img/ajax-loader.gif">
-        <div class="story story1" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
-          <div class="todayTomorrow">
-            <span class="today">TODAY</span>
-            <span class="tomorrow">TOMORROW</span>
-          </div>
-          <div class="date" itemprop="datePublished">
-            <div class="day"></div>
-            <div class="month">MAR</div>
-            <div class="year"></div>
-          </div>
-          <h3>
-            <a href="#"></a>
-            <span class="bullet">»</span>
-          </h3>
-          <!--<p class="copy ellipsis multiline"></p>-->
-          <!--<a class="readMore">Read More »</a>-->
-        </div>
-        <div class="story story2" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
+        <img alt="page loading" class="centerNewsLoader loading" src="../_files/level/img/ajax-loader.gif"/>
+        <div class="story story1" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
             <span class="today">TODAY</span>
             <span class="tomorrow">TOMORROW</span>
@@ -59,7 +42,7 @@
           <!--<p class="copy ellipsis multiline"></p>-->
           <!--<a class="readMore">Read More »</a>-->
         </div>
-        <div class="story story3 future" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
+        <div class="story story2" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
             <span class="today">TODAY</span>
             <span class="tomorrow">TOMORROW</span>
@@ -76,31 +59,30 @@
           <!--<p class="copy ellipsis multiline"></p>-->
           <!--<a class="readMore">Read More »</a>-->
         </div>
-        <a class="allNews" href="http://blogs.chapman.edu/dodge">View all News »</a>
+        <div class="story story3 future" itemscope="" itemtype="http://schema.org/Article">
+          <div class="todayTomorrow">
+            <span class="today">TODAY</span>
+            <span class="tomorrow">TOMORROW</span>
+          </div>
+          <div class="date" itemprop="datePublished">
+            <div class="day"></div>
+            <div class="month"></div>
+            <div class="year"></div>
+          </div>
+          <h3>
+            <a href="#"></a>
+            <span class="bullet">»</span>
+          </h3>
+          <!--<p class="copy ellipsis multiline"></p>-->
+          <!--<a class="readMore">Read More »</a>-->
+        </div>
+        <a class="allNews" href="#">View all News »</a>
       </div>
     </li>
-    <li class="active" style="display: none;">
+    <li>
       <div class="events clearfix">
-        <img alt="page loading" class="centerNewsLoader loading" src="{% asset_path ajax-loader.gif %}">
-        <div class="story story1" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
-          <div class="todayTomorrow">
-            <span class="today">TODAY</span>
-            <span class="tomorrow">TOMORROW</span>
-          </div>
-
-          <div class="date" itemprop="datePublished">
-            <div class="day"></div>
-            <div class="month">MAR</div>
-            <div class="year"></div>
-          </div>
-          <h3>
-            <a href="#"></a>
-            <span class="bullet">»</span>
-          </h3>
-          <!--<p class="copy ellipsis multiline"></p>-->
-          <!--<a class="readMore">Read More »</a>-->
-        </div>
-        <div class="story story2" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
+        <img alt="page loading" class="centerNewsLoader loading" src="../_files/level/img/ajax-loader.gif"/>
+        <div class="story story1" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
             <span class="today">TODAY</span>
             <span class="tomorrow">TOMORROW</span>
@@ -118,7 +100,7 @@
           <!--<p class="copy ellipsis multiline"></p>-->
           <!--<a class="readMore">Read More »</a>-->
         </div>
-        <div class="story story3 future" itemscope="" itemtype="http://schema.org/Article" style="visibility: hidden;">
+        <div class="story story2" itemscope="" itemtype="http://schema.org/Article">
           <div class="todayTomorrow">
             <span class="today">TODAY</span>
             <span class="tomorrow">TOMORROW</span>
@@ -136,8 +118,26 @@
           <!--<p class="copy ellipsis multiline"></p>-->
           <!--<a class="readMore">Read More »</a>-->
         </div>
-        <a class="allEvents" href="/events/copa-calendar.aspx">View all Events »</a>
+        <div class="story story3 future" itemscope="" itemtype="http://schema.org/Article">
+          <div class="todayTomorrow">
+            <span class="today">TODAY</span>
+            <span class="tomorrow">TOMORROW</span>
+          </div>
+
+          <div class="date" itemprop="datePublished">
+            <div class="day"></div>
+            <div class="month"></div>
+            <div class="year"></div>
+          </div>
+          <h3>
+            <a href="#"></a>
+            <span class="bullet">»</span>
+          </h3>
+          <!--<p class="copy ellipsis multiline"></p>-->
+          <!--<a class="readMore">Read More »</a>-->
+        </div>
+        <a class="allEvents" href="#">View all Events »</a>
       </div>
     </li>
   </ul>
-</div>
+</div> 
