--- a/src/stylesheets/base/variables.scss
+++ b/src/stylesheets/base/variables.scss
@@ -4,7 +4,8 @@
 Typically, if a color is used more than once or twice,
 it should be added here as a variable. Changing the value
 of these variables will affect the colors sitewide. */
-
+$font-stack-body: "proxima-nova-soft", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
+$font-stack-heading: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 $cu-red: #a82439;
 // $cu-red2: #830c28; // Old red replaced by $cu-red to keep colors standard
 // $cu-red3: #98002E; // Old red replaced by $cu-red to keep colors standard
