--- a/src/stylesheets/layout/main.scss
+++ b/src/stylesheets/layout/main.scss
@@ -1,3 +1,10 @@
+.main {
+  .primaryContent & {
+    max-width: none !important;
+    width: 100%;
+  }
+}
+
 #main {
   @include bp(m) {
     overflow: hidden;
@@ -9,75 +16,12 @@
 		margin-left: 0;
 	}
 	a {
-	  &:link, &:visited {
 	    border-bottom: 1px dotted #C0C0C0;
-	  }
 	}
 	.ie7 & {
     h2 {
       zoom: normal;
     }
-  }
-  .twoColumns & {
-    .story {
-      @include bp(l) {
-        width: 182px;
-      }
-    }
-  }
-  .newsEvents {
-    margin-top: 30px;
-    .story {
-      border: none;
-      border-bottom: 1px solid #ded3bb;
-      float: none;
-      width: 100%;
-      margin: 0;
-      padding: 15px 0px 15px 0px;
-      position: relative;
-      @include bp(l) {
-        display: table-cell;
-        width: 115px;
-        padding: 10px 20px 20px 15px;
-        border: none;
-        border-right: 1px solid #dfd3bc;
-      }
-    }
-  }
-  .newsEventsContent {
-    div {
-      margin: 0;
-    }
-    .news .story h3, .events .story h3 {
-      margin-top: 35px;
-    }
-    .featured {
-      padding: 10px 10px 10px 10px;
-      position: relative;
-      background-color: #FBF9F0;
-      .readMore {
-        margin-top: 10px;
-      }
-      .col1 {
-        display: inline-block;
-        max-width: 46%;
-        border-right: 1px solid #555a5e;
-      }
-      .col2 {
-        display: inline-block;
-        max-width: 49%;
-        vertical-align: top;
-        padding: 0 0 0 10px;
-      }
-      .title {
-        margin-top: 35px;
-        margin-bottom: 5px;
-      }
-    }
-  }
-  .allNews, .allEvents {
-    position: relative;
-    right: 60px;
   }
   .tabGroup {
     min-height: 0;
