--- a/src/stylesheets/master.scss
+++ b/src/stylesheets/master.scss
@@ -1,3 +1,5 @@
+@import "chapman-web-components/_assets/stylesheets/shared/_colors.scss";
+
 @import "base/variables";
 @import "base/mixins";
 
@@ -79,6 +81,7 @@
 @import "widgets/sponsorship-logo-feed";
 @import "widgets/spotlight-region";
 @import "widgets/three-box-callout";
+@import "widgets/news-events-feed";
 
 // Themes
 // @import "themes/wilkinson";
